--- a/src/app/pages/leave/applications/applications.html
+++ b/src/app/pages/leave/applications/applications.html
@@ -1,105 +1,165 @@
 <div class="row">
     <div class="col-md-12">
-        <div ba-panel ba-panel-class="xmedium-panel" ba-panel-title="Leave List">
+
+        <div ba-panel ba-panel-class="large-panel" ba-panel-title="Leave List">
+
+            <div class="row">
+                <div class="col-md-8">
+
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-4">
+                            Select Status
+                        </div>
+                        <div class="col-md-8">
+                            <select class="form-control" title="Select Status" ng-model="tabCtrl.selectedUcvItem" ng-options="opt.name for opt in tabCtrl.ucvlist"
+                                ng-change="tabCtrl.ucvOnChange(tabCtrl.selectedUcvItem)">
+              
+                    </select>
+
+                            <!--<select class="form-control"  title="Standard Select" placeholder="Select Option" selectpicker>
+                               <option>Pending</option>
+                               <option>Cancel</option>
+                               <option>Reject</option>
+                               <option>Approved</option>
+                               <option>Cancel Status</option>
+                               userlist
+
+                           </select>-->
+                        </div>
+                        
+                    </div>
+
+                </div>
+            </div>
+
+            <h3 class="with-line"></h3>
+
+            <!--Status
+        <select class="form-control" title="Standard Select" selectpicker>
+              <option>San Francisco</option>
+              <option>London</option>
+              <option>Minsk</option>
+              <option>Tokio</option>
+            </select>-->
             <table class="table table-bordered table-hover table-condensed">
-    <thead>
-        <tr class="sortable">
-            <td class="table-id">Sno</td>
-            <td class="col-md-2">Employee</td>
-            <td class="col-md-1">Contact Name</td>
-            <td class="col-md-1">Contact Number</td>
-            <td class="col-md-1">Comment</td>
-            <td class="col-md-1">Leave Type</td>
-            <td class="col-md-1">Address</td>
-            <td class="col-md-2">From Date</td>
-            <td class="col-md-2">To Date</td>
-            <td class="col-md-1">Actions</td>
-        </tr>
-    </thead>
-    <tbody ng-show="rows.length>0">
-        <tr ng-repeat="row in rows" class="editable-row">
-            <td >
-                {{$index+1}}
-            </td>
-            <td>
-                <span editable-text="row.EmpName" e-name="EmpName" e-form="rowform" e-required>
+                <thead>
+                    <tr class="sortable">
+                        <td class="table-id">Sno</td>
+                        <td class="col-md-2">Employee</td>
+                        <td class="col-md-1">Contact Name</td>
+                        <td class="col-md-1">Contact Number</td>
+                        <td class="col-md-1">Application Status</td>
+                        <td class="col-md-1">Comment</td>
+                        <td class="col-md-1">Leave Type</td>
+                        <td class="col-md-1">Address</td>
+                        <td class="col-md-2">From Date</td>
+                        <td class="col-md-1">To Date</td>
+                        <td class="col-md-1">Actions</td>
+                        <td class="col-md-1">Approved</td>
+                    </tr>
+                </thead>
+                <tbody ng-show="rows.length>0">
+                    <tr ng-repeat="row in rows" class="editable-row">
+                        <td>
+                            {{$index+1}}
+                        </td>
+                        <td>
+                            <span editable-text="row.EmpName" e-name="EmpName" e-form="rowform" e-required>
                 {{ row.EmpName || '' }}
                 </span>
-            </td>
-            <td>
-                <span editable-text="row.LEADContactName" e-name="LEADContactName" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LEADContactName" e-name="LEADContactName" e-form="rowform" e-required>
                 {{ row.LEADContactName || '' }}
                 </span>
-            </td>
-            <td>
-                <span editable-text="row.LEADContactNo" e-name="LEADContactNo" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LEADContactNo" e-name="LEADContactNo" e-form="rowform" e-required>
                 {{ row.LEADContactNo || '' }}
                 </span>
-            </td><td>
-                <span editable-text="row.LeadComment" e-name="LeadComment" e-form="rowform" e-required>
+                        </td>
+
+                        <td>
+                            <span editable-text="row.ApplicationStatus  | filter:'Approved'" e-name="ApplicationStatus" e-form="rowform" e-required>
+                {{ row.ApplicationStatus || '' }}
+                </span>
+                        </td>
+
+                        <td>
+
+                            <span editable-text="row.LeadComment" e-name="LeadComment" e-form="rowform" e-required>
                 {{ row.LeadComment || '' }}
                 </span>
-            </td><td>
-                <span editable-text="row.LTName" e-name="LTName" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LTName" e-name="LTName" e-form="rowform" e-required>
                 {{ row.LTName || '' }}
                 </span>
-            </td><td>
-                <span editable-text="row.LEADAddress" e-name="LEADAddress" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LEADAddress" e-name="LEADAddress" e-form="rowform" e-required>
                 {{ row.LEADAddress || '' }}
                 </span>
-            </td><td>
-                <span editable-text="row.LEADDateFrom"  e-name="LEADDateFrom" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LEADDateFrom" e-name="LEADDateFrom" e-form="rowform" e-required>
                 {{ row.LEADDateFrom || '' }}
                 </span>
-            </td><td>
-                <span editable-text="row.LEADDateTo" e-name="LEADDateTo" e-form="rowform" e-required>
+                        </td>
+                        <td>
+                            <span editable-text="row.LEADDateTo" e-name="LEADDateTo" e-form="rowform" e-required>
                 {{ row.LEADDateTo || '' }}
                 </span>
-            </td>
-            <!--<td class="col-md-3">
+                        </td>
+                        <!--<td class="col-md-3">
                 <div include-with-scope="app/pages/leave/applications/list/action.html"></div>
             </td>-->
-            <td style="width: 50px">
-                <a ui-sref="leave.appedit({pageId: tabCtrl.pageId, action:'edit', pkId:row.LEADId})">
-                    <i class="ion-edit"></i></a>
-            </td>
-        </tr>
-    </tbody>
-    <tbody ng-hide="rows.length>0">
-        <tr>
-            <td colspan="3">No branch found</td>
-        </tr>
-    </tbody>
- </table>
+                        <td style="width: 50px">
+                            <a ui-sref="leave.appedit({pageId: tabCtrl.pageId, action:'edit', pkId:row.LEADId})">
+                                <i class="ion-edit"></i></a>
+                        </td>
+                        <td style="width: 50px">
+                            <a ui-sref="leave.approvedapp({pageId: tabCtrl.pageId, pkId:row.LEADId})">
+                                <i class="ion-edit"></i></a>
+                        </td>
+
+                    </tr>
+                </tbody>
+                <tbody ng-hide="rows.length>0">
+                    <tr>
+                        <td colspan="3">No branch found</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
 
 
 <div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
-  <div class="mail-messages-control side-message-navigation-item">
-    <div class="toggle-navigation-container">
-      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
-    </div>
-    <label class="checkbox-inline custom-checkbox nowrap">
+    <div class="mail-messages-control side-message-navigation-item">
+        <div class="toggle-navigation-container">
+            <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+        </div>
+        <label class="checkbox-inline custom-checkbox nowrap">
       <input type="checkbox" id="inlineCheckbox01" value="option1">
       <span class="select-all-label">Select All</span>
     </label>
-    <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
-    <button type="button" class="btn  btn-icon refresh-button" ui-sref="leave.appadd({action:'create'})"><i class="ion-add"></i>Add</button>
-    <div class="btn-group" uib-dropdown>
-      <button type="button" class="btn more-button" uib-dropdown-toggle>
+        <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
+        <button type="button" class="btn  btn-icon refresh-button" ui-sref="leave.appadd({action:'create'})"><i class="ion-add"></i>Add</button>
+        <div class="btn-group" uib-dropdown>
+            <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
       </button>
-      <ul uib-dropdown-menu>
-        <li><a href>Edit</a></li>
-        <li><a href>Delete</a></li>
-        <li><a href>Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href>Separated link</a></li>
-      </ul>
+            <ul uib-dropdown-menu>
+                <li><a href>Edit</a></li>
+                <li><a href>Delete</a></li>
+                <li><a href>Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href>Separated link</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-  
- 
 </div>
