--- a/src/app/pages/organization/masters/list/mastersList.html
+++ b/src/app/pages/organization/masters/list/mastersList.html
@@ -3,13 +3,9 @@
     <div class="toggle-navigation-container">
       <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
     </div>
-    <label class="checkbox-inline custom-checkbox nowrap">
-      <input type="checkbox" id="inlineCheckbox01" value="option1">
-      <span class="select-all-label">Select All</span>
-    </label>
     <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i></button>
     <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
-    <div class="btn-group" uib-dropdown>
+    <!--<div class="btn-group" uib-dropdown>
       <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
       </button>
@@ -20,8 +16,9 @@
         <li role="separator" class="divider"></li>
         <li><a href>Separated link</a></li>
       </ul>
-    </div>
-    <span class="font-bold">{{listCtrl.page.pageinfo.title}}</span>
+    </div>-->
+    <span class="font-bold">|{{listCtrl.page.pageinfo.title}} | </span>
+    <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
   </div>
   <ng-include src="listCtrl.templateUrlPath"></ng-include>
 </div>
