--- a/src/app/pages/organization/masters/masters.html
+++ b/src/app/pages/organization/masters/masters.html
@@ -10,7 +10,7 @@
            ui-sref="organization.masters.list({name:t.name, pageId: t.id})">
             {{t.text}}<span class="new-mails" ng-show="t.newMails">{{t.newMails}}</span>
           </div>
-          <div class="labels">
+          <!--<div class="labels">
             <div class="labels-title">
 
             </div>
@@ -28,10 +28,10 @@
                 <span class="tag label study">Study</span>
               </div>
             </div>
-          </div>
-          <div class="add-label-container">
+          </div>-->
+          <!--<div class="add-label-container">
             <i class="ion-plus-round"></i><span class="label-input-stub">Add new label</span>
-          </div>
+          </div>-->
         </div>
         <ui-view></ui-view>
       </div>
