--- a/src/app/pages/organization/masters/list/mastersList.html
+++ b/src/app/pages/organization/masters/list/mastersList.html
@@ -3,9 +3,20 @@
     <div class="toggle-navigation-container">
       <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
     </div>
-    <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i></button>
-    <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})"><i class="ion-add"></i>Add</button>
-    <!--<div class="btn-group" uib-dropdown>
+    <div class="row">
+      <div class="col-md-6"><span class="bold-text">{{listCtrl.page.pageinfo.title}}</span><br/>
+      <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
+      </div>
+      <div class="col-md-6 text-right">
+        <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i>Refresh</button>
+        <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.masters.add({name:listCtrl.tempName,pageId: listCtrl.pageId, action:'create'})">
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
+        <button type="button" class="btn  btn-icon refresh-button">
+          <i class="fa fa-filter" aria-hidden="true"></i></button>
+        <select ng-show="(listCtrl.page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="listCtrl.selectedUcvItem" ng-options="opt.name for opt in listCtrl.page.pageinfo.ucvlist"
+          ng-change="listCtrl.ucvOnChange(listCtrl.selectedUcvItem)">
+                    </select>
+        <!--<div class="btn-group" uib-dropdown>
       <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
       </button>
@@ -17,8 +28,9 @@
         <li><a href>Separated link</a></li>
       </ul>
     </div>-->
-    <span class="font-bold">|{{listCtrl.page.pageinfo.title}} | </span>
-    <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
+      </div>
+    </div>
   </div>
   <ng-include src="listCtrl.templateUrlPath"></ng-include>
+  
 </div>
