--- a/src/app/pages/organization/empupload/empupload.html
+++ b/src/app/pages/organization/empupload/empupload.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="../../assets/widgets/tabs-ui/tabs.js"></script>
+<!--<script type="text/javascript" src="../../assets/widgets/tabs-ui/tabs.js"></script>
 <script type="text/javascript">
     /* jQuery UI Tabs */
 
@@ -14,7 +14,7 @@
         });
     });
 
-</script>
+</script>-->
 <style>
     .grid {
         height: 450px;
@@ -130,7 +130,8 @@
                                         accept=".xls,.xlsx,.ods"  
                                         opts="tabCtrl.gridOptions" 
                                         uploader="tabCtrl.uploader"
-                                        multiple="false" style="display: none;">
+                                        multiple="false" 
+                                        style="display: none;">
                                     </label>
                                 <label class="">(Only .xls, .xlsx are supported)</label>
                             </div>
@@ -168,7 +169,7 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="col-md-6 text-right font-bold  title-alt">
-                                    Rudra CRM Field
+                                    Employee Field
                                 </div>
                                 <div class="col-md-6 font-bold  title-alt">
                                     File Column
@@ -178,7 +179,7 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <div class="col-md-6 text-right font-bold">
-                                    Rudra CRM Field
+                                    Employee Field
                                 </div>
                                 <div class="col-md-6 font-bold">
                                     File Column
