--- a/src/app/pages/loan/loanmanagement/loanapplication.html
+++ b/src/app/pages/loan/loanmanagement/loanapplication.html
@@ -1,153 +1,97 @@
-<div class="row">
+<div class="row mail-client-container transparent">
   <div class="col-md-12">
-
-    <div ba-panel ba-panel-class="large-panel" ba-panel-title="Leave List">
-
-      <div class="row">
-        <div class="col-md-8">
-
-        </div>
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-4">
-              Select Status
-            </div>
-            <div class="col-md-8">
-              <select class="form-control" title="Select Status" ng-model="tabCtrl.selectedUcvItem" ng-options="opt.name for opt in tabCtrl.ucvlist"
-                ng-change="tabCtrl.ucvOnChange(tabCtrl.selectedUcvItem)">
-              
-                    </select>
-
-              <!--<select class="form-control"  title="Standard Select" placeholder="Select Option" selectpicker>
-                               <option>Pending</option>
-                               <option>Cancel</option>
-                               <option>Reject</option>
-                               <option>Approved</option>
-                               <option>Cancel Status</option>
-                               userlist
-
-                           </select>-->
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-
-      <h3 class="with-line"></h3>
-
-      <!--Status
-        <select class="form-control" title="Standard Select" selectpicker>
-              <option>San Francisco</option>
-              <option>London</option>
-              <option>Minsk</option>
-              <option>Tokio</option>
-            </select>-->
-      <table class="table table-bordered table-hover table-condensed">
-        <thead>
-          <tr class="sortable">
-            <td class="table-id">Sno</td>
-            <td class="col-md-2">Employee</td>
-            <td class="col-md-1">Application Date</td>
-            <td class="col-md-2">Loan Type</td>
-            <td class="col-md-1">Loan Provider</td>
-            <td class="col-md-2">Loan Amount</td>
-            <td class="col-md-1">Installment Amount</td>
-            <td class="col-md-2">Remark</td>
-          
-
-            <!--<td class="col-md-1">Actions</td>-->
-
-          </tr>
-        </thead>
-        <tbody ng-show="rows.length>0">
-          <tr ng-repeat="row in rows" class="editable-row">
-            <td>
-              {{$index+1}}
-            </td>
-            <td>
-              <span editable-text="row.EmpName" e-name="EmpName" e-form="rowform" e-required>
-                {{ row.EmpName || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LADate" e-name="LADate" e-form="rowform" e-required>
-                {{ row.LADate || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LTName" e-name="LTName" e-form="rowform" e-required>
-                {{ row.LTName || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LPName" e-name="LPName" e-form="rowform" e-required>
-                {{ row.LPName || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LAApplyAmount" e-name="LAApplyAmount" e-form="rowform" e-required>
-                {{ row.LAApplyAmount || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LAInstallment" e-name="LAInstallment" e-form="rowform" e-required>
-                {{ row.LAInstallment || '' }}
-                </span>
-            </td>
-            <td>
-              <span editable-text="row.LARemark" e-name="LARemark" e-form="rowform" e-required>
-                {{ row.LARemark || '' }}
-                </span>
-            </td>
-
-
-
-
-            <!--<td style="width: 50px">
-                            <a ui-sref="leave.appedit({pageId: tabCtrl.pageId, action:'edit', pkId:row.LEADId})">
-                                <i class="ion-edit"></i></a>
-                        </td>-->
-
-
-          </tr>
-        </tbody>
-        <tbody ng-hide="rows.length>0">
-          <tr>
-            <td colspan="3">No branch found</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-
-
-<div class="side-message-navigation" ng-class="{'expanded': tabCtrl.navigationCollapsed}">
-  <div class="mail-messages-control side-message-navigation-item">
-    <div class="toggle-navigation-container">
-      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
-    </div>
-    <label class="checkbox-inline custom-checkbox nowrap">
+    <div ba-panel ba-panel-class="xmedium-panel mail-panel">
+      <div class="letter-layout">
+        <span class="font-bold">{{listCtrl.page.pageinfo.title}}</span></t></t>
+         <label class="checkbox-inline custom-checkbox nowrap">
       <input type="checkbox" id="inlineCheckbox01" value="option1">
       <span class="select-all-label">Select All</span>
     </label>
-    <button type="button" class="btn  btn-icon refresh-button"><i class="ion-refresh"></i></button>
-    <button type="button" class="btn  btn-icon refresh-button"><i class="ion-add"></i>Add</button>
-    <div class="btn-group" uib-dropdown>
-      <button type="button" class="btn more-button" uib-dropdown-toggle>
+        <button type="button" class="btn  btn-icon refresh-button" ng-click="listCtrl.refreshData()"><i class="ion-refresh"></i></button>
+        <button type="button" class="btn  btn-icon refresh-button" ui-sref="organization.empadd({action:'create'})"><i class="ion-add"></i>Add</button>
+        <div class="btn-group" uib-dropdown>
+            <button type="button" class="btn more-button" uib-dropdown-toggle>
         More <span class="caret"></span>
       </button>
-      <ul uib-dropdown-menu>
-        <li><a href>Edit</a></li>
-        <li><a href>Delete</a></li>
-        <li><a href>Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href>Separated link</a></li>
-      </ul>
+            <ul uib-dropdown-menu>
+                <li><a href>Edit</a></li>
+                <li><a href>Delete</a></li>
+                <li><a href>Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href>Separated link</a></li>
+            </ul>
+        </div>
+      
+    </div>
+ <style>
+        .djTable {
+            width: 100%;
+        }
+        
+        .djTable td,
+        th {
+            overflow: hidden;
+        }
+        
+        .djTable td:first,
+        th:first {
+            width: 30px;
+        }
+        
+        .djTable td:last-child,
+        th:last-child {
+            width: 30px;
+        }
+    </style>
+    
+    <table class="table table-bordered table-hover table-condensed djTable" st-table="displayedCollection" st-safe-src="rows"
+        st-pagination-scroll>
+        <thead>
+            <tr class="sortable">
+                <th class="col-md-1" ng-show="gridObject.enableSrNo" st-sort="$index">Sno</th>
+                <th class="col-md-5" ng-repeat="col in gridObject.columns" st-sort="{{col.name}}">{{col.text}}</th>
+                <th class="col-md-1">Actions</th>
+            </tr>
+            <tr ng-show="gridObject.enableFilter">
+                <th ng-show="gridObject.enableSrNo"></th>
+                <th ng-show="gridObject.enableTitleFilter"><input st-search="{{searchName}}" placeholder="Search" class="input-sm form-control search-input" type="search"
+                    /></th>
+                <th ng-show="gridObject.enableGlobalFilter && (gridObject.enableTitleFilter && gridObject.columns.length!=1)" colspan="{{gridObject.columns.length-1}}">
+                    <input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
+            </tr>
+        </thead>
+        <tbody ng-show="displayedCollection.length>0">
+            <tr ng-repeat="row in displayedCollection">
+                <td cursor="pointer" ng-show="gridObject.enableSrNo">
+                    {{$index+1}}
+                </td>
+                <td cursor="pointer" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
+                <td ng-show="gridObject.enableAction">
+                    <a>
+                        <i class="fa fa-pencil-square-o"></i></a>
+                </td>
+            </tr>
+        </tbody>
+        <tbody ng-show="displayedCollection.length<=0&&isLoaded">
+            <tr>
+                <td colspan="6">No {{listCtrl.page.pageinfo.title}} found</td>
+            </tr>
+        </tbody>
+        <tbody ng-show="isLoading">
+            <tr>
+                <td colspan="6">Loading {{listCtrl.page.pageinfo.title}} Please wait..<i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i></td>
+            </tr>
+        </tbody>
+        <tfoot ng-show="gridObject.enablePagination">
+            <tr>
+                <td colspan="6" class="text-center">
+                    <div st-pagination="" st-items-by-page="gridObject.paginationLength" st-displayed-pages="5"></div>
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+
+      </div>
     </div>
   </div>
 </div>
-
-                      
-                     
